created footer, small translation improvements and added upload model functionality